# hacknation_mozilla_challenge

./: .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  background.js  content.js  install.sh  main.py  package-lock.json  pyproject.toml
.cursor/rules/: third-party-testing.mdc
.github/workflows/: deploy-pages.yml
bridge/: harbor_bridge_host.json.template  pyproject.toml
bridge-rs/: Cargo.toml  install.sh
bridge-rs/src/: http_server.rs  main.rs  native_messaging.rs
bridge-rs/src/js/: mod.rs  runtime.rs  sandbox.rs
bridge-rs/src/llm/: mod.rs
bridge-rs/src/rpc/: mod.rs
bridge-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
bridge-ts/scripts/: install_native_manifest_linux.sh  install_native_manifest_macos.sh  start-memory-server.ts  test-any-llm.ts  test-chat.ts  test-exact-parse.ts  test-filesystem-final.ts  test-filesystem-server.ts  test-llm-setup.ts  test-llm.ts  test-mcp-client.ts  test-memory-server.ts  test-memory-v05.ts  test-mistral-simple.ts  test-mistral-tools.ts  test-mistral-workflow.ts  test-ollama-harbor-flow.ts  test-ollama-tools-quick.ts  test-ollama-tools.ts  test-orchestrator-mistral.ts  test-parser.ts
bridge-ts/src/: handlers.ts  mcp-client.ts  message-types.ts  native-messaging.ts  server-store.ts  testing.ts  types.ts
bridge/scripts/: harbor_bridge_launcher.sh  install_native_manifest_linux.sh  install_native_manifest_macos.sh  run_demo_server.py
bridge/src/harbor_bridge/: __init__.py  handlers.py  main.py  mcp_client.py  native_messaging.py  server_store.py
bridge/src/harbor_bridge/catalog/: __init__.py  base.py  database.py  github_awesome.py  manager.py  official_registry.py
bridge/src/harbor_bridge/installer/: __init__.py  manager.py  runner.py  runtime.py  secrets.py
bridge/tests/: __init__.py  conftest.py  test_handlers.py  test_native_messaging.py  test_server_store.py
config/: README.md  build.env.example  oauth.env.example  runtime.env.example
data/: amazon_iphone17.json  duckduckgo_iphone17.json  google_lens_iphone17.json  google_shopping_iphone17.json  text_iphone17_ch_en.json
demo/: README.md  index.html  package-lock.json  package.json
demo/bring-your-chatbot/: README.md  index.html
demo/chat-poc/: README.md  app.js  index.html
demo/email-chat/: index.html
demo/getting-started/: index.html
demo/shared/: styles.css
demo/summarizer/: README.md  chrome-compat.html  index.html
demo/web-agent-control/: README.md
demo/web-agents/: README.md
docs/: AGENTIC_BROWSER_ROADMAP.md  DEVELOPER_GUIDE.md  HARBOR_WEB_API_EXPLAINER.md  JS_AI_PROVIDER_API.md  LLMS.txt  MCP_HOST.md  QUICKSTART_CHROME.md  QUICKSTART_FIREFOX.md  TESTING_PLAN.md  USER_GUIDE.md  mcp-wasm-extension-plan.md
extension/: manifest.chrome.json  manifest.json  manifest.safari.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/src/: background.ts  bridge-api.ts  bridge-dispatch.ts  demo-bootstrap.ts  design-tokens.css  directory.html  directory.ts  extension-api.ts  native-connection.ts  page-chat.ts  permission-prompt.html  permission-prompt.ts  sidebar.html  sidebar.ts  vscode-detector.ts  welcome.js
harbor-search-sidebar/: SETUP.md  START_HERE.md  manifest.json  package-lock.json  package.json
harbor-search-sidebar/public/: index.html
harbor-search-sidebar/src/: SearchSidebar.css
installer/: README.md  credentials.env.example
installer/firefox/: build-pkg.sh
installer/macos/: build-pkg.sh
installer/safari/: README.md  SafariWebExtensionHandler.swift  add-web-agents-target.md  build-installer.sh  build.sh  (+1 more)
scripts/: generate-test-harness.mjs  post-build.js
shared/: protocol.ts
spec/: explainer.md  security-privacy.md
src/: App.css  App.jsx  SearchSidebar.css  SearchSidebar.jsx  api_server.py  mcp_server.py  search.py
web-agents-api/: build.mjs  manifest.chrome.json  manifest.json
whitepaper/: README.md  _config.yml  feedback.md  index.md  values.md
(+189 files in other folders)
